--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@syncfusion/ej2-react-grids": "^28.1.35",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.263.1",
     "react": "^18.3.1",
