--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@syncfusion/ej2-react-grids": "^28.1.35",
+    "axios": "^1.7.9",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.263.1",
     "react": "^18.3.1",
