--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.15.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.263.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
